--- a/index.qmd
+++ b/index.qmd
@@ -1,16 +1,24 @@
 ---
-title: "ipgttanalysis"
+title: "IPGTT Data Cleaning and Analysis"
 ---
 
-This is a Quarto website.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+### IPGTT Data Cleaning
 
-```{r}
-1 + 1
+
+```{r setup, include=FALSE}
+
+# Importing necessary libraries
+library(dplyr)
+library(ggplot2)
+library(plotly)
+library(readxl)
+library(stringr)
+
+okabe_ito_palette <- c("#D55E00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#E69F00", "#CC79A7", "#999999")
 ```
 
-# IPGTT Data Cleaning and Analysis
+
 
 Data Dictionary
 
@@ -25,71 +33,52 @@ Data Dictionary
 | body_weight     | num       | Body weight of the mouse                               | g                   |
 | glucose reading | num       | Blood glucose level of the mouse                       | mg/dL               |
 
+
 #### Filtering Unnecessary Data:
 
 ```{r}
-library(readxl)
-library(dplyr)
+# Reading excel database
 IPGTT_tidy_data_corrected <- read_excel("C:/Users/dhana/Desktop/ISB/DataFrames/T1D/data/IPGTT_tidy_data_corrected.xlsx")
-
 summary(IPGTT_tidy_data_corrected)
+
+```
+
+```{r}
 
 # Removing Mouse and nan data values that were created during ChatGPT analysis
 IPGTT_data <- IPGTT_tidy_data_corrected %>% filter(Mouse != "Mouse")
 IPGTT_data <- IPGTT_data %>% filter(Mouse != "nan")
-```
 
-```{r}
+# Removing all rows where there are no body weight AND glucose readings
 IPGTT_data <- IPGTT_data %>% filter(!(is.na(BW) & is.na(`Glucose Reading`)))
-#IPGTT_data <- IPGTT_data %>% filter(!is.na(`Glucose Reading`))
-#IPGTT_data <- IPGTT_data[!(is.na(IPGTT_data$BW) & is.na(IPGTT_data$`Glucose Reading`)), ]
+
 ```
 
 #### Changing variable names according to Tidy Data guidelines
 
-##### **(Saved old names for future reference)**
-
 ```{r}
-
 old_names <- names(IPGTT_data)
 
 new_names <- c("mouse", "body_weight", "test_week", "genotype", "sex", "time_point", "glucose_reading")
 names(IPGTT_data) <- new_names
 ```
 
-#### Viewing variable types
-
-```{r}
-str(IPGTT_data)
-```
 
 #### Creating unique mouse ID's depending on its name and genotype
 
 ```{r}
-
 IPGTT_data <- IPGTT_data %>% mutate(mouse_id = paste(mouse, genotype, sep = "-"))
-
-
-
 ```
 
 #### Converting time_point from char to numeric
 
 ```{r}
-library(dplyr)
-library(stringr)
-
 IPGTT_data <- IPGTT_data %>% mutate(time_point = as.numeric(str_extract(time_point, "\\d+")))
-#IPGTT_data <- IPGTT_data %>% select(-time_point)
 ```
 
-### Factors
+####  Factors
 
 ```{r}
-# IPGTT_data$sex <-  factor(IPGTT_data$sex, levels = c("Female", "Male"))
-# IPGTT_data$genotype <- factor(IPGTT_data$genotype, levels = c("WT-WT", "Het-NOD", "KO-NOD"))
-
-
 IPGTT_data$sex <-  factor(IPGTT_data$sex)
 IPGTT_data$genotype <- factor(IPGTT_data$genotype)
 
@@ -108,30 +97,29 @@ IPGTT_data <- IPGTT_data %>% relocate(body_weight, .before = glucose_reading)
 IPGTT_data <- IPGTT_data %>% relocate(time_point, .before = body_weight)
 ```
 
+
+### IPGTT Data Visualizations
+
 ```{r}
 #IPGTT trajectories overlaid with within-genotype medians
 
-library(dplyr)
-library(ggplot2)
-
-okabe_ito_palette <- rep(grDevices::palette.colors(palette = "Okabe-Ito"))
 
 IPGTT_fil <- IPGTT_data %>% filter(!is.na(glucose_reading), test_week %in% 1:4)
-
-
 
 median_data <- IPGTT_data %>% filter(!is.na(glucose_reading), test_week %in% 1:4)  %>% 
   group_by(time_point, genotype, test_week) %>%
   summarise(median_glucose_reading = median(glucose_reading, na.rm = TRUE))
 
-ggplot(IPGTT_fil, aes(time_point, glucose_reading, color = genotype, group = mouse_id)) +
+plot1 <- ggplot(IPGTT_fil, aes(time_point, glucose_reading, color = genotype, group = mouse_id)) +
   geom_line(alpha = 0.3) +
   geom_line(data = median_data, aes(x = time_point, y = median_glucose_reading, color = genotype, group = genotype)) + 
   facet_wrap(~ test_week,  ncol = 4) +
   theme_minimal() +
   scale_x_continuous(breaks=seq(0,120, by=30)) +
   scale_color_manual(values = okabe_ito_palette) +
-  labs(title = "IPGTT trajectories overlaid with within-genotype medians", x="Test time (min)", y = "Blood glucose (mg/dL)",   subtitle = "(First four weeks of data)") +
-  theme(legend.position = "bottom")
+  labs(title = "IPGTT trajectories overlaid with within-genotype medians", x="Test time (min)", y = "Blood glucose (mg/dL)",    subtitle = "(First four weeks of data)") +
+  theme(legend.position = "bottom", axis.text.x = element_text(angle = 90))
+
+ggplotly(plot1)
 
 ```
