--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,10 @@
 ---
-title: "IPGTT Data Cleaning and Analysis"
+title: ""
 ---
 
 
-### IPGTT Data Cleaning
+
+### Data Dictionary
 
 
 ```{r setup, include=FALSE}
@@ -18,12 +19,8 @@ library(stringr)
 okabe_ito_palette <- c("#D55E00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#E69F00", "#CC79A7", "#999999")
 ```
 
-
-
-Data Dictionary
-
 | Name            | Data Type | Description                                            | Unit of Measurement |
-|-----------------|-----------------|--------------------|-----------------|
+|------------------|------------------|-------------------|------------------|
 | mouse_id        | chr       | Unique identifier for each mouse                       | *NA*                |
 | mouse           | chr       | Identifier or name assigned to each mouse              | *NA*                |
 | genotype        | factor    | Genetic constitution of each mouse (e.g., WT, Het, KO) | *NA*                |
@@ -33,6 +30,7 @@ Data Dictionary
 | body_weight     | num       | Body weight of the mouse                               | g                   |
 | glucose reading | num       | Blood glucose level of the mouse                       | mg/dL               |
 
+### Cleaning
 
 #### Filtering Unnecessary Data:
 
@@ -63,7 +61,6 @@ new_names <- c("mouse", "body_weight", "test_week", "genotype", "sex", "time_poi
 names(IPGTT_data) <- new_names
 ```
 
-
 #### Creating unique mouse ID's depending on its name and genotype
 
 ```{r}
@@ -76,7 +73,7 @@ IPGTT_data <- IPGTT_data %>% mutate(mouse_id = paste(mouse, genotype, sep = "-")
 IPGTT_data <- IPGTT_data %>% mutate(time_point = as.numeric(str_extract(time_point, "\\d+")))
 ```
 
-####  Factors
+#### Factors
 
 ```{r}
 IPGTT_data$sex <-  factor(IPGTT_data$sex)
@@ -93,8 +90,11 @@ IPGTT_data <- IPGTT_data %>%
   select(mouse_id, mouse, genotype, sex, test_week, time_point, body_weight, glucose_reading, everything())
 ```
 
+\
 
-### IPGTT Data Visualizations
+\
+
+### Visualizations
 
 ```{r}
 #IPGTT trajectories overlaid with within-genotype medians
