--- a/index.qmd
+++ b/index.qmd
@@ -16,12 +16,18 @@ library(plotly)
 library(readxl)
 library(stringr)
 library(purrr)
+library(showtext)
 
 okabe_ito_palette <- c("#D55E00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#E69F00", "#CC79A7", "#999999")
 
 
 # Define the color palette for the genotypes
 color_palette <- c("Het-NOD" = "#D55E00", "KO-NOD" = "#56B4E9", "WT-WT" = "#009E73")
+
+# Add the downloaded font
+font_add("Source", "SourceCodePro-Regular.ttf")  # Specify the path to the font file
+showtext_auto()  # Automatically use showtext for text rendering
+
 ```
 
 | Name            | Data Type | Description                                            | Unit of Measurement |
@@ -41,7 +47,7 @@ color_palette <- c("Het-NOD" = "#D55E00", "KO-NOD" = "#56B4E9", "WT-WT" = "#009E
 
 ```{r}
 # Reading excel database
-IPGTT_tidy_data_corrected <- read_excel("C:/Users/dhana/Desktop/ISB/DataFrames/T1D/data/IPGTT_tidy_data_corrected.xlsx")
+IPGTT_tidy_data_corrected <- read_excel("IPGTT_tidy_data_corrected.xlsx")
 summary(IPGTT_tidy_data_corrected)
 
 ```
@@ -180,6 +186,19 @@ calculate_medians <- function(data) {
 
 # Helper function to generate the plot
 generate_plot <- function(data, medians, weeks, genotypes, color_palette) {
+  
+  
+  colored_title <- paste(
+    "<b>IPGTT trajectories for</b> ",
+    paste(
+      sprintf("<b><span style='color:%s;'>%s</span></b>", color_palette[genotypes], genotypes),
+      collapse = " & "
+    ),
+    "<b>overlaid with within-genotype medians during weeks</b>",
+     paste("<b>",weeks[1], "-",weeks[4], "</b>")
+  )
+  
+  
   plot <- ggplot(data, aes(time_point, glucose_reading, color = genotype, group = mouse_id)) +
     geom_line(alpha = 0.3) +
     geom_line(data = medians, aes(x = time_point, y = median_glucose_reading, color = genotype, group = genotype)) + 
@@ -187,14 +206,21 @@ generate_plot <- function(data, medians, weeks, genotypes, color_palette) {
     theme_minimal() +
     scale_x_continuous(breaks = seq(0, 120, by = 30)) +
     scale_color_manual(values = color_palette) +
-    labs(title = "IPGTT trajectories overlaid with within-genotype medians",
-         x = "Test time (min)", y = "Blood glucose (mg/dL)",
-         subtitle = paste("Weeks:", paste(weeks, collapse = ", "), "| Genotypes:", paste(genotypes, collapse = ", "))) +
-    theme(legend.position = "bottom", axis.text.x = element_text(angle = 90))
+     labs(
+      title = "Placeholder",  # Title will be overridden by plotly layout
+      x = "Test time (min)", 
+      y = "Blood glucose (mg/dL)"
+    ) +
+    theme(text = element_text(family = "Source"), legend.position = "none", axis.text.x = element_text(angle = 90))
 
-  ggplotly(plot, tooltip = c("mouse_id", "time_point", "glucose_reading", "median_glucose_reading")) %>%
+ ggplotly(plot, tooltip = c("mouse_id", "time_point", "glucose_reading", "median_glucose_reading")) %>%
     config(displayModeBar = FALSE) %>%
-    layout(legend = list(orientation = "h", x = 0.5, xanchor = "center", y = -0.2))
+    layout(title = list(text = colored_title, font = list(size = 15), x = 0), 
+           legend = list(orientation = "h", x = 0.5, xanchor = "center", y = -0.2),
+            plot_bgcolor = "ivory",  # Set the plot background color in plotly
+            paper_bgcolor = "ivory"  # Set the paper background color in plotly
+           )
+  
 }
 
 # Main function to iterate over weeks and genotypes using purrr
@@ -215,13 +241,15 @@ create_plots <- function(data, week_combinations, genotypes, color_palette) {
     })
 }
 
-
 plots <- create_plots(IPGTT_data, weeks_list, genotypes, color_palette)
 
-# Display all plots
-for (i in seq_along(plots)) {
-  print(plots[[i]])
+
+#walk(plots, print)
+
+for(plot in plots){
+  print(plot)
 }
+
 
 ```
 
